force-app/main/default/objects/AccountAddress__c/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>Bairro do endereço.</description>
    <label>Bairro</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>