force-app/main/default/objects/AccountAddress__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Cidade do endereço</description>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Account Addresses</relationshipLabel>
    <relationshipName>Account_Addresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>