force-app/main/default/objects/AccountAddress__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <description>Chave de cadastro do endereço de conta.</description>
    <label>Codigo</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>