force-app/main/default/objects/AccountAddress__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <description>Via (rua, avenida, travessa, etc) do endereço.</description>
    <label>Logradouro</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>