force-app/main/default/objects/AccountAddress__c/validationRules/CEP_valido.validationRule-meta.xml
<ValidationRule>
    <fullName>CEP_valido</fullName>
    <active>true</active>
    <description>O CEP deve ter formato válido</description>
    <errorConditionFormula>NOT(REGEX( CEP__c , &quot;^\\d{2}\\d{3}[-]\\d{3}$&quot;))</errorConditionFormula>
    <errorDisplayField>CEP__c</errorDisplayField>
    <errorMessage>CEP em formato inválido</errorMessage>
</ValidationRule>