force-app/main/default/objects/AccountAddress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CEP__c</columns>
    <columns>Logradouro__c</columns>
    <columns>Bairro__c</columns>
    <columns>Cidade__c</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>